objects/Candidate__c.object
<CustomObject>
    <description>Candidate</description>
    <fields>
        <fullName>EmailID__c</fullName>
        <description>EmailID</description>
        <inlineHelpText>EmailID</inlineHelpText>
        <label>EmailID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <description>Experience</description>
        <inlineHelpText>Please enter Experience in &lt;num&gt; Y &lt;num&gt; M format</inlineHelpText>
        <label>Experience</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name</description>
        <inlineHelpText>First Name</inlineHelpText>
        <label>First Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>Full Name</description>
        <formula>First_Name__c  &amp; &quot; &quot; &amp;  Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Full Name</inlineHelpText>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name</description>
        <inlineHelpText>Last Name</inlineHelpText>
        <label>Last Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone</description>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Skill_Set__c</fullName>
        <description>Skill Set</description>
        <inlineHelpText>Skill Set</inlineHelpText>
        <label>Skill Set</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <nameField>
        <displayFormat>Candidate-{0000}</displayFormat>
        <label>CandidateID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>